--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,16 @@
 html,
 body {
-  font-family: "Inter Variable", BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue;
+  font-family:
+    'Inter Variable',
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue;
   padding: 0;
   margin: 0;
 }
