--- a/src/app/admin/layout.scss
+++ b/src/app/admin/layout.scss
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 300px 1fr;
   grid-template-rows: 60px 1fr;
+  height: 100vh;
+  width: 100vw;
 
   .sidebar {
     grid-row: 1 / 3;
