--- a/src/components/admin/Navbar/Navbar.scss
+++ b/src/components/admin/Navbar/Navbar.scss
@@ -1,3 +1,12 @@
 .navbar {
   background-color: #777777;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 0 32px;
+
+  &__right {
+    display: inline-flex;
+    gap: 8px;
+  }
 }
